--- a/bank-frontend/src/app/pages/home/home/new-transfer/new-transfer.component.scss
+++ b/bank-frontend/src/app/pages/home/home/new-transfer/new-transfer.component.scss
@@ -17,3 +17,18 @@ h1 {
   font-size: 3em;
   margin-bottom: 3em;
 }
+
+.button-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+}
+
+.button-row button {
+  margin-left: 1em;
+  margin-right: 1em;
+  width: 70%;
+}
